--- a/src/app/pages/auth/auth.page.html
+++ b/src/app/pages/auth/auth.page.html
@@ -1,8 +1,9 @@
-<app-header title="Login"></app-header>
+<app-header title="Login"/>
 <ion-content>
   <div class="d-flex-center">
+
     <form [formGroup]="form" class="auth-form"  (ngSubmit)="submit()" (keypress.enter)="submit()">
-     <app-logo></app-logo>
+     <app-logo />
       <app-custom-input
         autocomplete="email"
         icon="mail-outline"
