Guardar cambios de muestreo de inf del usuario

--- a/src/app/pages/auth/sign-up/sign-up.page.html
+++ b/src/app/pages/auth/sign-up/sign-up.page.html
@@ -1,4 +1,4 @@
-<app-header title="Register"></app-header>
+<app-header backbutton="/auth" title="Register"></app-header>
 <ion-content>
   <div class="d-flex-center">
     <form
