--- a/src/app/pages/main/home/home.page.html
+++ b/src/app/pages/main/home/home.page.html
@@ -1,13 +1,36 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Impresion de datos</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header title="Inicio"></app-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">home</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+<ion-fab vertical="bottom" horizontal="end" slot="fixed">
+  <ion-fab-button>
+    <ion-icon name="add"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
+<div class="user-profile">
+    <ion-card *ngIf="userData">
+      <ion-card-header>
+        <ion-card-title>Perfil de Usuario</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-item>
+          <ion-label>Nombre:</ion-label>
+          <ion-text>{{ userData.nombre }}</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label>Email:</ion-label>
+          <ion-text>{{ userData.email }}</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label>UID:</ion-label>
+          <ion-text>{{ userData.uid }}</ion-text>
+        </ion-item>
+      </ion-card-content>
+    </ion-card>
+
+    <div *ngIf="!userData" class="loading">
+      <ion-spinner></ion-spinner>
+      <p>Cargando información del usuario...</p>
+    </div>
+  </div>
+
 </ion-content>
