--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,5 +1,10 @@
 <ion-header class="ion-no-border">
   <ion-toolbar color="primary">
+
+<ion-buttons slot="start">
+  <ion-back-button  *ngIf="backbutton" [defaultHref]="backbutton"></ion-back-button>
+</ion-buttons>
+
 <ion-title>
   <strong>{{ title }}</strong>
   <div class="admin">A D M I N </div>
