--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,13 +1,19 @@
 <ion-header class="ion-no-border">
   <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button *ngIf="backbutton" [defaultHref]="backbutton"></ion-back-button>
+    </ion-buttons>
 
-<ion-buttons slot="start">
-  <ion-back-button  *ngIf="backbutton" [defaultHref]="backbutton"></ion-back-button>
-</ion-buttons>
+    <ion-title>
+      <strong>{{ title }}</strong>
+      <div class="admin">A D M I N</div>
+    </ion-title>
 
-<ion-title>
-  <strong>{{ title }}</strong>
-  <div class="admin">A D M I N </div>
-</ion-title>
+    <!-- Icono de usuario en el lado derecho -->
+    <ion-buttons slot="end">
+      <ion-button (click)="navigateToProfile()">
+        <ion-icon name="person-circle" style="font-size: 1.8rem;"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
