guardando de admin y usuario

--- a/src/app/shared/headeradmin/headeradmin.component.html
+++ b/src/app/shared/headeradmin/headeradmin.component.html
@@ -6,7 +6,7 @@
 
     <ion-title>
       <strong>{{ title }}</strong>
-      <div class="admin">U S E R</div>
+      <div class="admin">A D M </div>
     </ion-title>
 
     <!-- Icono de usuario en el lado derecho -->
