--- a/src/app/pages/main/admin/admin.page.html
+++ b/src/app/pages/main/admin/admin.page.html
@@ -1,13 +1,7 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>admin</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">admin</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<app-headeradmin title="ADMINISTRADOR"></app-headeradmin>
+<ion-content>
+  <!-- Contenido principal de tu home -->
+  <div class="main-content">
+    
+  </div>
 </ion-content>
