haceindo cambios en la parte de ediccion de los usuarios

--- a/src/app/pages/main/home/home.page.html
+++ b/src/app/pages/main/home/home.page.html
@@ -13,9 +13,9 @@
     <div *ngIf="places && places.length === 0" class="empty-state">
       <ion-icon name="home-outline" size="large"></ion-icon>
       <h3>No tienes casas registradas</h3>
-      <p>Agrega tu primera casa para comenzar</p>
+      <p>Reportate con soporte tecnico </p>
       <ion-button routerLink="/add-place">
-        Agregar Casa
+        help
       </ion-button>
     </div>
 
