--- a/src/app/pages/main/profile/profile.page.html
+++ b/src/app/pages/main/profile/profile.page.html
@@ -76,6 +76,7 @@
       <ion-card>
         <ion-card-header>
           <ion-card-title>Editar Perfil</ion-card-title>
+
           <ion-card-subtitle>Actualiza tu información</ion-card-subtitle>
         </ion-card-header>
 
@@ -93,7 +94,7 @@
 
             <!-- Contraseña actual -->
             <ion-item>
-              <ion-label position="stacked">Contraseña actual</ion-label>
+              <ion-label position="stacked">Contraseña actual (ingresar al editar datos)</ion-label>
               <ion-input
                 formControlName="currentPassword"
                 type="password"
