--- a/src/app/pages/main/profile/profile.page.html
+++ b/src/app/pages/main/profile/profile.page.html
@@ -17,7 +17,7 @@
 
   <div class="user-crud-container">
     <!-- Vista de datos -->
-    <div *ngIf="!isEditing && userData" class="user-profile">
+    <div *ngIf="!isEditing && userData" class="user-profile"><!--Esto se muestra solo si isEditing = false -->
       <ion-card>
         <ion-card-header>
           <ion-card-title>Mi Perfil</ion-card-title>
