--- a/src/app/pages/main/admin-edit/admin-edit.page.html
+++ b/src/app/pages/main/admin-edit/admin-edit.page.html
@@ -15,7 +15,7 @@
 
   <ion-item>
     <ion-label>Estado</ion-label>
-    <ion-toggle [(ngModel)]="house.activado" color="success"></ion-toggle>
+    <ion-toggle [(ngModel)]="house.active" color="success"></ion-toggle>
   </ion-item>
 
   <ion-button expand="block" color="primary" (click)="saveChanges()">
