--- a/src/app/pages/auth/sign-up/sign-up.page.html
+++ b/src/app/pages/auth/sign-up/sign-up.page.html
@@ -11,19 +11,19 @@
       <app-custom-input
         autocomplete="nombre"
         icon="person-outline"
-        [control]="form.controls.nombre"
+        [control]="form.controls.name"
         type="text"
         label="Nombre"
       ></app-custom-input>
 
       <div
         class="validators"
-        *ngIf="form.controls.nombre.errors && form.controls.nombre.touched"
+        *ngIf="form.controls.name.errors && form.controls.name.touched"
       >
-        <div *ngIf="form.controls.nombre.errors?.['required']">
+        <div *ngIf="form.controls.name.errors?.['required']">
           El correo es requerido
         </div>
-        <div *ngIf="form.controls.nombre.errors?.['minlenght']">
+        <div *ngIf="form.controls.name.errors?.['minlenght']">
           El nombre debe tener al menos 4 caracteres
         </div>
       </div>
@@ -42,7 +42,7 @@
         <div *ngIf="form.controls.email.errors?.['required']">
           El correo es requerido
         </div>
-        <div *ngIf="form.controls.nombre.errors?.['minlenght']">
+        <div *ngIf="form.controls.name.errors?.['minlenght']">
          Ingrese un correo valido
         </div>
       </div>
