--- a/src/app/pages/main/profile/profile.page.html
+++ b/src/app/pages/main/profile/profile.page.html
@@ -34,7 +34,7 @@
               ></ion-icon>
               <ion-label>
                 <h3>Nombre</h3>
-                <p>{{ userData.nombre }}</p>
+                <p>{{ userData.name }}</p>
               </ion-label>
             </ion-item>
 
