--- a/src/app/pages/main/admin/admin.page.html
+++ b/src/app/pages/main/admin/admin.page.html
@@ -110,7 +110,7 @@
   <ion-icon slot="icon-only" name="create"></ion-icon>
 </ion-item-option>
 
-      <ion-item-option color="danger" >
+      <ion-item-option color="danger" (click)="deleteHouse(house.id, user.id)">
         <ion-icon slot="icon-only" name="trash"></ion-icon>
       </ion-item-option>
     </ion-item-options>
