--- a/src/app/pages/main/profile/profile.page.html
+++ b/src/app/pages/main/profile/profile.page.html
@@ -67,6 +67,12 @@
             <ion-icon slot="start" name="create-outline"></ion-icon>
             Editar Perfil
           </ion-button>
+
+        <ion-button expand="block" color="danger" (click)="logout()">
+  <ion-icon slot="start" name="log-out-outline"></ion-icon>
+  Cerrar Sesión
+</ion-button>
+
         </ion-card-content>
       </ion-card>
     </div>
