--- a/src/app/pages/main/profile/profile.page.html
+++ b/src/app/pages/main/profile/profile.page.html
@@ -90,7 +90,7 @@
           <form [formGroup]="userForm" (ngSubmit)="saveChanges()">
             <ion-item>
               <ion-label position="stacked">Nombre</ion-label>
-              <ion-input formControlName="nombre" type="text"></ion-input>
+              <ion-input formControlName="name" type="text"></ion-input>
             </ion-item>
 
             <ion-item>
